@@ -5,6 +5,7 @@
         <title>網路電台</title>
         <link rel="stylesheet" type="text/css" href="player.css"/>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+        <script type="text/javascript" src="jquery.timers.js"></script>
         <script type="text/javascript" src="player.js"></script>
     </head>
     <body>
@@ -14,6 +15,10 @@
                 <select id="category"></select>
                 <select id="channel"></select>
                 <input id='control' type='button' value='▶'/>
+                <br/>
+                <input id='alarm' type='checkbox'/>Alarm:
+                <select id="hour"></select>
+                <select id="minute"></select>
             </fieldset>
             <div id='player'></div>
         </div>
